// {C} Copyright 2017 Pensando Systems Inc. All rights reserved.

syntax = "proto3";
// Configure and manage Event,  Logging, Alerts, Mirror Sessions
// and other monitoring policies.
package monitoring;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

import "tenant.proto";
import "telemetry.proto";
import "alerts.proto";
import "eventpolicy.proto";
import "mirror.proto";
import "techsupport.proto";
import "troubleshooting.proto";
import "archive.proto";
import "auditpolicy.proto";

service MonitoringV1 {

    // Prefix for all resources served by this service.
    option (venice.apiPrefix) = "monitoring";
    // API Version.
    option (venice.apiVersion) = "v1";

    option (venice.apiGrpcCrudService) = "EventPolicy";
    option (venice.apiGrpcCrudService) = "FwlogPolicy";
    option (venice.apiGrpcCrudService) = "FlowExportPolicy";
    option (venice.apiGrpcCrudService) = "Alert";
    option (venice.apiGrpcCrudService) = "AlertPolicy";
    option (venice.apiGrpcCrudService) = "AlertDestination";
    option (venice.apiGrpcCrudService) = "MirrorSession";
    option (venice.apiGrpcCrudService) = "TroubleshootingSession";
    option (venice.apiGrpcCrudService) = "TechSupportRequest";
    option (venice.apiGrpcCrudService) = "ArchiveRequest";
    option (venice.apiGrpcCrudService) = "AuditPolicy";

    option (venice.apiRestService) = {
        Object: "EventPolicy"
        Method: ["get", "put", "delete", "post", "list", "watch", "label"]
    };

    option (venice.apiRestService) = {
        Object: "FwlogPolicy"
        Method: ["get", "put", "delete", "post", "list", "watch", "label"]
    };

    option (venice.apiRestService) = {
        Object: "FlowExportPolicy"
        Method: ["get", "put", "delete", "post", "list", "watch", "label"]
    };

    option (venice.apiRestService) = {
        Object: "Alert"
        Method: ["list", "put", "get" , "watch", "label"]
    };
    option (venice.apiRestService) = {
        Object: "AlertPolicy"
        Method: ["get", "put", "delete", "post", "list" , "watch", "label"]
    };
    option (venice.apiRestService) = {
        Object: "AlertDestination"
        Method: ["get", "put", "delete", "post", "list", "watch", "label"]
    };

    option (venice.apiRestService) = {
        Object: "MirrorSession"
        Method: ["get", "put", "delete", "post", "list", "watch", "label"]
    };
    option (venice.apiRestService) = {
        Object: "TroubleshootingSession"
        Method: [ "get", "put", "delete", "post", "list", "label"]
    };
    option (venice.apiRestService) = {
        Object: "TechSupportRequest"
        Method: [ "get", "delete", "post", "list", "watch"]
    };
    option (venice.apiRestService) = {
        Object: "ArchiveRequest"
        Method: [ "get", "delete", "post", "list", "watch"]
    };
    option (venice.apiRestService) = {
        Object: "AuditPolicy"
        Method: ["get", "put", "delete", "post", "watch"]
    };
    // Action to cancel archive request that is in process(scheduled or running)
    option (venice.apiAction) = {
        Object: "ArchiveRequest"
        Action: "Cancel"
        Request: "CancelArchiveRequest"
        Response: "ArchiveRequest"
    };
}
